# patchlint

./: README.md  patchlint.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_builder.py  test_checkpatch.py  test_cli.py  test_git.py  test_report.py  test_warnings.py
